--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,25 @@
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 20px;
+  text-align: center;
+  height: 50px;
+  margin-top: 100px;
+  margin-bottom: -1rem;
+}
+
+.footer-link{
+  font-size: 20px;
+  text-align: left;
+  color: white;
+}
+
 .footer {
   left: 0;
-  bottom: -1rem;
+  bottom: -1em;
   width: 100%;
-  text-align: center;
-margin-top: 20vh;
-color: rgb(228, 228, 228);
+  /* text-align: center; */
+  margin-top: 20vh;
+  color: white;
+  background-color: #343a40;
 }
