--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -13,7 +13,11 @@ img {
 }
 
 .container {
-  margin-left: 0px;
-  margin-right: 0px;
+  /* margin-left: 0px;
+  margin-right: 0px; */
   width: 100%;
+}
+
+.text {
+  text-align: center;
 }
