--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -17,9 +17,11 @@ img {
   /* margin-left: 0px;
   margin-right: 0px; */
   width: 100%;
+  margin-top: 10vh;
 }
 
 .text,
 h4 {
   text-align: center;
 }
+
