--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,7 +8,7 @@ margin-left: 5%;
 background-color: #f7f7f9;
 /* color: #919958; */
 color: black;
-padding-top: 10px;
+padding: 10px;
 }
 
 .hvr-grow {
