contact page updated and improved
also changed page title

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -5,3 +5,14 @@ label {
 .jumbotron {
   background: url('../../white-waves.png')
 }
+
+.contact-card {
+  /* text-align: center; */
+  max-width: 50%;
+  margin-left: 25%;
+}
+
+.contact-card-header {
+  text-align: center;
+
+}
