--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -16,3 +16,15 @@ label {
   text-align: center;
 
 }
+
+@media screen and (max-width: 375px) {
+  #contact-card {
+    margin-left: 0px;
+    max-width: 100%;
+    margin-top: 50%;
+  }
+
+  h5 {
+    font-size: .9em;
+  }
+}
