trying to get portfolio columns responsive

--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -25,3 +25,14 @@ h4 {
   text-align: center;
 }
 
+
+/* @media screen and (max-width: 375px) {
+  [class*='col-'] {
+    width: 100%;
+  }
+  .row {
+    display: block;
+    width: 100%;
+    align-content: center;
+  }
+} */
