--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -25,6 +25,12 @@ h4 {
   text-align: center;
 }
 
+.otherProjects {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 
 
 @media screen and (max-width: 375px) {
