--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -7,10 +7,9 @@ label {
 }
 
 .contact-card {
-  /* text-align: center; */
   max-width: 50%;
   margin-left: 25%;
-  margin-top: 25%;
+  margin-top: 20vh;
 }
 
 .contact-card-header {
@@ -18,11 +17,11 @@ label {
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 450px) {
   #contact-card {
     margin-left: 0px;
     max-width: 100%;
-    margin-top: 50%;
+    margin-top: 20vh;
   }
 
   h5 {
